hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__namespace.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Ok(
    Hir {
        identifiers: [
            IdentId(0) => "<root>",
            IdentId(1) => "ns",
            IdentId(2) => "f1",
            IdentId(3) => "number",
            IdentId(4) => "f2",
            IdentId(5) => "core",
            IdentId(6) => "add",
            IdentId(7) => "boolean",
            IdentId(8) => "div",
            IdentId(9) => "eq",
            IdentId(10) => "ge",
            IdentId(11) => "gt",
            IdentId(12) => "le",
            IdentId(13) => "lt",
            IdentId(14) => "mul",
            IdentId(15) => "neg",
            IdentId(16) => "neq",
            IdentId(17) => "sub",
            IdentId(18) => "void",
        ],
        identifier_refs: [
            IdentRefId(0) => IdentifierRef {
                id: IdentRefId(0),
                ident: Identifier {
                    id: IdentId(3),
                    span: 3:23; [46, 52],
                    symbol_id: SymbolId(5),
                },
            },
            IdentRefId(1) => IdentifierRef {
                id: IdentRefId(1),
                ident: Identifier {
                    id: IdentId(1),
                    span: 6:17; [105, 107],
                    symbol_id: SymbolId(2),
                },
            },
            IdentRefId(2) => IdentifierRef {
                id: IdentRefId(2),
                ident: Identifier {
                    id: IdentId(2),
                    span: 6:20; [108, 110],
                    symbol_id: SymbolId(20),
                },
            },
            IdentRefId(3) => IdentifierRef {
                id: IdentRefId(3),
                ident: Identifier {
                    id: IdentId(6),
                    span: 6:15; [103, 104],
                    symbol_id: SymbolId(19),
                },
            },
        ],
        expressions: [
            ExprId(0) => Expression {
                id: ExprId(0),
                kind: Literal(
                    Literal {
                        kind: Number(1),
                        span: 3:32; [55, 56],
                    },
                ),
                span: 3:32; [55, 56],
                type_id: TypeId(4),
            },
            ExprId(1) => Expression {
                id: ExprId(1),
                kind: Block(
                    [
                        StmtId(1),
                    ],
                ),
                span: 3:30; [53, 59],
                type_id: TypeId(2),
            },
            ExprId(2) => Expression {
                id: ExprId(2),
                kind: Literal(
                    Literal {
                        kind: Number(1),
                        span: 6:13; [101, 102],
                    },
                ),
                span: 6:13; [101, 102],
                type_id: TypeId(4),
            },
            ExprId(3) => Expression {
                id: ExprId(3),
                kind: Literal(
                    Literal {
                        kind: IdentRefId(1),
                        span: 6:17; [105, 107],
                    },
                ),
                span: 6:17; [105, 107],
                type_id: TypeId(1),
            },
            ExprId(4) => Expression {
                id: ExprId(4),
                kind: Access(
                    ExprId(3),
                    IdentRefId(2),
                ),
                span: 6:17; [105, 110],
                type_id: TypeId(1),
            },
            ExprId(5) => Expression {
                id: ExprId(5),
                kind: FunctionCall(
                    ExprId(4),
                    [],
                ),
                span: 6:17; [105, 112],
                type_id: TypeId(4),
            },
            ExprId(6) => Expression {
                id: ExprId(6),
                kind: FunctionCall(
                    ExprId(8),
                    [
                        ExprId(2),
                        ExprId(5),
                    ],
                ),
                span: 6:13; [101, 112],
                type_id: TypeId(4),
            },
            ExprId(7) => Expression {
                id: ExprId(7),
                kind: Block(
                    [
                        StmtId(4),
                    ],
                ),
                span: 5:18; [87, 123],
                type_id: TypeId(2),
            },
            ExprId(8) => Expression {
                id: ExprId(8),
                kind: Literal(
                    Literal {
                        kind: IdentRefId(3),
                        span: 6:15; [103, 104],
                    },
                ),
                span: 6:15; [103, 104],
                type_id: TypeId(6),
            },
        ],
        statements: [
            StmtId(0) => Statement {
                id: StmtId(0),
                kind: Namespace(
                    Identifier {
                        id: IdentId(0),
                        span: 0:0; [0, 0],
                        symbol_id: SymbolId(1),
                    },
                    InputId(0),
                    [
                        StmtId(3),
                        StmtId(5),
                        StmtId(6),
                    ],
                ),
                span: 0:0; [0, 0],
            },
            StmtId(1) => Statement {
                id: StmtId(1),
                kind: Ret(
                    Some(
                        ExprId(0),
                    ),
                    Implicit,
                ),
                span: 3:32; [55, 57],
            },
            StmtId(2) => Statement {
                id: StmtId(2),
                kind: LetFn(
                    Identifier {
                        id: IdentId(2),
                        span: 3:17; [40, 42],
                        symbol_id: SymbolId(20),
                    },
                    [],
                    [],
                    Return {
                        type_def_id: Some(
                            TypeDefId(0),
                        ),
                        typed_id: TypeId(4),
                    },
                    Provided(
                        ExprId(1),
                    ),
                    None,
                ),
                span: 3:13; [36, 59],
            },
            StmtId(3) => Statement {
                id: StmtId(3),
                kind: Namespace(
                    Identifier {
                        id: IdentId(1),
                        span: 2:19; [19, 21],
                        symbol_id: SymbolId(2),
                    },
                    InputId(0),
                    [
                        StmtId(2),
                    ],
                ),
                span: 4:9; [68, 69],
            },
            StmtId(4) => Statement {
                id: StmtId(4),
                kind: Ret(
                    Some(
                        ExprId(6),
                    ),
                    Implicit,
                ),
                span: 6:13; [101, 113],
            },
            StmtId(5) => Statement {
                id: StmtId(5),
                kind: LetFn(
                    Identifier {
                        id: IdentId(4),
                        span: 5:13; [82, 84],
                        symbol_id: SymbolId(21),
                    },
                    [],
                    [],
                    Return {
                        type_def_id: None,
                        typed_id: TypeId(1),
                    },
                    Provided(
                        ExprId(7),
                    ),
                    None,
                ),
                span: 5:9; [78, 123],
            },
            StmtId(6) => Statement {
                id: StmtId(6),
                kind: Namespace(
                    Identifier {
                        id: IdentId(5),
                        span: 9:11; [143, 147],
                        symbol_id: SymbolId(3),
                    },
                    InputId(0),
                    [],
                ),
                span: 9:17; [149, 150],
            },
        ],
        type_defs: [
            TypeDefId(0) => TypeDef {
                kind: Simple(
                    [
                        IdentRefId(0),
                    ],
                ),
                span: 3:23; [46, 52],
            },
        ],
        root: StmtId(0),
        symbols: [
            SymbolId(0) => Symbol {
                id: SymbolId(0),
                kind: NotFound,
                type_id: TypeId(0),
            },
            SymbolId(1) => Symbol {
                id: SymbolId(1),
                kind: Namespace(
                    IdentId(0),
                    {
                        IdentId(1): [
                            SymbolId(2),
                        ],
                        IdentId(4): [
                            SymbolId(21),
                        ],
                        IdentId(5): [
                            SymbolId(3),
                        ],
                    },
                ),
                type_id: TypeId(1),
            },
            SymbolId(2) => Symbol {
                id: SymbolId(2),
                kind: Namespace(
                    IdentId(1),
                    {
                        IdentId(2): [
                            SymbolId(20),
                        ],
                    },
                ),
                type_id: TypeId(1),
            },
            SymbolId(3) => Symbol {
                id: SymbolId(3),
                kind: Namespace(
                    IdentId(5),
                    {
                        IdentId(3): [
                            SymbolId(5),
                        ],
                        IdentId(6): [
                            SymbolId(19),
                        ],
                        IdentId(7): [
                            SymbolId(6),
                        ],
                        IdentId(8): [
                            SymbolId(18),
                        ],
                        IdentId(9): [
                            SymbolId(16),
                            SymbolId(17),
                        ],
                        IdentId(10): [
                            SymbolId(15),
                        ],
                        IdentId(11): [
                            SymbolId(14),
                        ],
                        IdentId(12): [
                            SymbolId(13),
                        ],
                        IdentId(13): [
                            SymbolId(12),
                        ],
                        IdentId(14): [
                            SymbolId(11),
                        ],
                        IdentId(15): [
                            SymbolId(10),
                        ],
                        IdentId(16): [
                            SymbolId(8),
                            SymbolId(9),
                        ],
                        IdentId(17): [
                            SymbolId(7),
                        ],
                        IdentId(18): [
                            SymbolId(4),
                        ],
                    },
                ),
                type_id: TypeId(1),
            },
            SymbolId(4) => Symbol {
                id: SymbolId(4),
                kind: NativeType(
                    IdentId(18),
                    Void,
                ),
                type_id: TypeId(2),
            },
            SymbolId(5) => Symbol {
                id: SymbolId(5),
                kind: NativeType(
                    IdentId(3),
                    Number,
                ),
                type_id: TypeId(2),
            },
            SymbolId(6) => Symbol {
                id: SymbolId(6),
                kind: NativeType(
                    IdentId(7),
                    Boolean,
                ),
                type_id: TypeId(2),
            },
            SymbolId(7) => Symbol {
                id: SymbolId(7),
                kind: Native(
                    IdentId(17),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    SubNumberNumber,
                ),
                type_id: TypeId(6),
            },
            SymbolId(8) => Symbol {
                id: SymbolId(8),
                kind: Native(
                    IdentId(16),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    NeqNumberNumber,
                ),
                type_id: TypeId(7),
            },
            SymbolId(9) => Symbol {
                id: SymbolId(9),
                kind: Native(
                    IdentId(16),
                    [
                        TypeId(3),
                        TypeId(3),
                    ],
                    TypeId(3),
                    NeqBooleanBoolean,
                ),
                type_id: TypeId(8),
            },
            SymbolId(10) => Symbol {
                id: SymbolId(10),
                kind: Native(
                    IdentId(15),
                    [
                        TypeId(4),
                    ],
                    TypeId(4),
                    NegNumber,
                ),
                type_id: TypeId(9),
            },
            SymbolId(11) => Symbol {
                id: SymbolId(11),
                kind: Native(
                    IdentId(14),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    MulNumberNumber,
                ),
                type_id: TypeId(6),
            },
            SymbolId(12) => Symbol {
                id: SymbolId(12),
                kind: Native(
                    IdentId(13),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    LtNumberNumber,
                ),
                type_id: TypeId(7),
            },
            SymbolId(13) => Symbol {
                id: SymbolId(13),
                kind: Native(
                    IdentId(12),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    LeNumberNumber,
                ),
                type_id: TypeId(7),
            },
            SymbolId(14) => Symbol {
                id: SymbolId(14),
                kind: Native(
                    IdentId(11),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    GtNumberNumber,
                ),
                type_id: TypeId(7),
            },
            SymbolId(15) => Symbol {
                id: SymbolId(15),
                kind: Native(
                    IdentId(10),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    GeNumberNumber,
                ),
                type_id: TypeId(7),
            },
            SymbolId(16) => Symbol {
                id: SymbolId(16),
                kind: Native(
                    IdentId(9),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    EqNumberNumber,
                ),
                type_id: TypeId(7),
            },
            SymbolId(17) => Symbol {
                id: SymbolId(17),
                kind: Native(
                    IdentId(9),
                    [
                        TypeId(3),
                        TypeId(3),
                    ],
                    TypeId(3),
                    EqBooleanBoolean,
                ),
                type_id: TypeId(8),
            },
            SymbolId(18) => Symbol {
                id: SymbolId(18),
                kind: Native(
                    IdentId(8),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    DivNumberNumber,
                ),
                type_id: TypeId(6),
            },
            SymbolId(19) => Symbol {
                id: SymbolId(19),
                kind: Native(
                    IdentId(6),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    AddNumberNumber,
                ),
                type_id: TypeId(6),
            },
            SymbolId(20) => Symbol {
                id: SymbolId(20),
                kind: LetFn(
                    IdentId(2),
                    StmtId(2),
                    [],
                    TypeId(4),
                ),
                type_id: TypeId(10),
            },
            SymbolId(21) => Symbol {
                id: SymbolId(21),
                kind: LetFn(
                    IdentId(4),
                    StmtId(5),
                    [],
                    TypeId(1),
                ),
                type_id: TypeId(11),
            },
        ],
        types: [
            TypeId(0) => Invalid,
            TypeId(1) => Void,
            TypeId(2) => None,
            TypeId(3) => Boolean,
            TypeId(4) => Number,
            TypeId(5) => Type,
            TypeId(6) => Function(
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(4),
            ),
            TypeId(7) => Function(
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(3),
            ),
            TypeId(8) => Function(
                [
                    TypeId(3),
                    TypeId(3),
                ],
                TypeId(3),
            ),
            TypeId(9) => Function(
                [
                    TypeId(4),
                ],
                TypeId(4),
            ),
            TypeId(10) => Function(
                [],
                TypeId(4),
            ),
            TypeId(11) => Function(
                [],
                TypeId(1),
            ),
        ],
        exit_points: ExitPoints {
            exit_points: {
                ExprId(1): [
                    Implicit(
                        Some(
                            ExprId(0),
                        ),
                    ),
                ],
                ExprId(7): [
                    Implicit(
                        Some(
                            ExprId(6),
                        ),
                    ),
                ],
            },
            unreachable: [],
        },
    },
)
