hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__namespace_is_invalid_in_block.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Namespace invalid at this location",
                span: 4:13; [57, 58],
                level: Error,
            },
        ],
        inputs: (),
    },
)
