hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__namespace_nested.snap
---
source: hir/src/passes/resolver.rs
expression: "UnresolvedHir ::\nfrom(compilation_unit.into_ast().unwrap()).resolve(Natives :: new())"
---
Ok(
    Hir {
        identifiers: [
            IdentId(0) => "<root-namespace>",
            IdentId(1) => "ns1",
            IdentId(2) => "ns2",
            IdentId(3) => "add",
            IdentId(4) => "boolean",
            IdentId(5) => "div",
            IdentId(6) => "eq",
            IdentId(7) => "ge",
            IdentId(8) => "gt",
            IdentId(9) => "le",
            IdentId(10) => "lt",
            IdentId(11) => "mul",
            IdentId(12) => "neg",
            IdentId(13) => "neq",
            IdentId(14) => "number",
            IdentId(15) => "sub",
            IdentId(16) => "void",
        ],
        identifier_refs: [],
        expressions: [],
        statements: [
            StmtId(0) => Statement {
                id: StmtId(0),
                kind: Namespace(
                    Identifier {
                        id: IdentId(0),
                        span: 0:0; [0, 0],
                        bound: Bound(17),
                    },
                    None,
                    InputId(0),
                    [
                        StmtId(2),
                    ],
                ),
                span: 0:0; [0, 0],
            },
            StmtId(1) => Statement {
                id: StmtId(1),
                kind: Namespace(
                    Identifier {
                        id: IdentId(2),
                        span: 3:23; [47, 50],
                        bound: Bound(19),
                    },
                    Some(
                        StmtId(0),
                    ),
                    InputId(0),
                    [],
                ),
                span: 3:28; [52, 53],
            },
            StmtId(2) => Statement {
                id: StmtId(2),
                kind: Namespace(
                    Identifier {
                        id: IdentId(1),
                        span: 2:19; [19, 22],
                        bound: Bound(18),
                    },
                    Some(
                        StmtId(0),
                    ),
                    InputId(0),
                    [
                        StmtId(1),
                    ],
                ),
                span: 4:9; [62, 63],
            },
        ],
        type_defs: [],
        roots: [
            StmtId(0),
        ],
        symbols: [
            SymbolId(0) => Symbol {
                id: SymbolId(0),
                kind: NotFound,
                type_id: TypeId(0),
            },
            SymbolId(1) => Symbol {
                id: SymbolId(1),
                kind: NativeType(
                    IdentId(16),
                    Void,
                ),
                type_id: TypeId(2),
            },
            SymbolId(2) => Symbol {
                id: SymbolId(2),
                kind: NativeType(
                    IdentId(14),
                    Number,
                ),
                type_id: TypeId(2),
            },
            SymbolId(3) => Symbol {
                id: SymbolId(3),
                kind: NativeType(
                    IdentId(4),
                    Boolean,
                ),
                type_id: TypeId(2),
            },
            SymbolId(4) => Symbol {
                id: SymbolId(4),
                kind: Native(
                    IdentId(15),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    SubNumberNumber,
                ),
                type_id: TypeId(5),
            },
            SymbolId(5) => Symbol {
                id: SymbolId(5),
                kind: Native(
                    IdentId(13),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    NeqNumberNumber,
                ),
                type_id: TypeId(6),
            },
            SymbolId(6) => Symbol {
                id: SymbolId(6),
                kind: Native(
                    IdentId(13),
                    [
                        TypeId(3),
                        TypeId(3),
                    ],
                    TypeId(3),
                    NeqBooleanBoolean,
                ),
                type_id: TypeId(7),
            },
            SymbolId(7) => Symbol {
                id: SymbolId(7),
                kind: Native(
                    IdentId(12),
                    [
                        TypeId(4),
                    ],
                    TypeId(4),
                    NegNumber,
                ),
                type_id: TypeId(8),
            },
            SymbolId(8) => Symbol {
                id: SymbolId(8),
                kind: Native(
                    IdentId(11),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    MulNumberNumber,
                ),
                type_id: TypeId(5),
            },
            SymbolId(9) => Symbol {
                id: SymbolId(9),
                kind: Native(
                    IdentId(10),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    LtNumberNumber,
                ),
                type_id: TypeId(6),
            },
            SymbolId(10) => Symbol {
                id: SymbolId(10),
                kind: Native(
                    IdentId(9),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    LeNumberNumber,
                ),
                type_id: TypeId(6),
            },
            SymbolId(11) => Symbol {
                id: SymbolId(11),
                kind: Native(
                    IdentId(8),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    GtNumberNumber,
                ),
                type_id: TypeId(6),
            },
            SymbolId(12) => Symbol {
                id: SymbolId(12),
                kind: Native(
                    IdentId(7),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    GeNumberNumber,
                ),
                type_id: TypeId(6),
            },
            SymbolId(13) => Symbol {
                id: SymbolId(13),
                kind: Native(
                    IdentId(6),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    EqNumberNumber,
                ),
                type_id: TypeId(6),
            },
            SymbolId(14) => Symbol {
                id: SymbolId(14),
                kind: Native(
                    IdentId(6),
                    [
                        TypeId(3),
                        TypeId(3),
                    ],
                    TypeId(3),
                    EqBooleanBoolean,
                ),
                type_id: TypeId(7),
            },
            SymbolId(15) => Symbol {
                id: SymbolId(15),
                kind: Native(
                    IdentId(5),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    DivNumberNumber,
                ),
                type_id: TypeId(5),
            },
            SymbolId(16) => Symbol {
                id: SymbolId(16),
                kind: Native(
                    IdentId(3),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    AddNumberNumber,
                ),
                type_id: TypeId(5),
            },
            SymbolId(17) => Symbol {
                id: SymbolId(17),
                kind: Namespace(
                    IdentId(0),
                    None,
                    {},
                    {
                        IdentId(1): [
                            SymbolId(18),
                        ],
                    },
                ),
                type_id: TypeId(1),
            },
            SymbolId(18) => Symbol {
                id: SymbolId(18),
                kind: Namespace(
                    IdentId(1),
                    Some(
                        SymbolId(17),
                    ),
                    {},
                    {
                        IdentId(2): [
                            SymbolId(19),
                        ],
                    },
                ),
                type_id: TypeId(1),
            },
            SymbolId(19) => Symbol {
                id: SymbolId(19),
                kind: Namespace(
                    IdentId(2),
                    Some(
                        SymbolId(18),
                    ),
                    {},
                    {},
                ),
                type_id: TypeId(1),
            },
        ],
        types: [
            TypeId(0) => Invalid,
            TypeId(1) => Void,
            TypeId(2) => None,
            TypeId(3) => Boolean,
            TypeId(4) => Number,
            TypeId(5) => Function(
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(4),
            ),
            TypeId(6) => Function(
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(3),
            ),
            TypeId(7) => Function(
                [
                    TypeId(3),
                    TypeId(3),
                ],
                TypeId(3),
            ),
            TypeId(8) => Function(
                [
                    TypeId(4),
                ],
                TypeId(4),
            ),
        ],
        exit_points: ExitPoints {
            exit_points: {},
            unreachable: [],
        },
    },
)
