hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__native_function_must_not_have_body.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Native function f must not have a body",
                span: 3:37; [82, 91],
                level: Error,
            },
        ],
        inputs: (),
    },
)
