hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__native_struct_cannot_be_instantiated.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Native struct S cannot be instantiated",
                span: 5:21; [118, 122],
                level: Error,
            },
        ],
        inputs: (),
    },
)
