hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__native_struct_fields_cannot_be_accessed.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Native struct S fields cannot be accessed",
                span: 5:13; [114, 124],
                level: Error,
            },
        ],
        inputs: (),
    },
)
